--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,15 +65,14 @@ color: #FFFFFF;
     flex-direction: column;
 }
 .card{
-    width: 270px;
-height: 160px;
-top: 300px;
-left: 115px;
-border: 2px solid #FFFFFF
+   height: 100%;
+   width: 100%;
+   padding:69px 56px;
+border: 2px solid #4E3BA3
 
 }
 .bg-color{
-    background: #2F1893;
+    background:#2F1893;
 }
 .padding-bottom{
     padding-bottom: 30px;
